--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^2.6.5",
+    "firebase": "^6.3.3",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
+    "vuefire": "^2.1.0",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
