--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^3.6.95",
     "core-js": "^2.6.5",
     "firebase": "^6.3.3",
+    "firebaseui": "^4.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
