--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "apexcharts": "^3.8.3",
     "core-js": "^2.6.5",
     "firebase": "^6.3.3",
     "firebaseui": "^4.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.4.0",
     "vue-router": "^3.0.7",
     "vuefire": "^2.1.0",
     "vuetify": "^2.0.0"
