--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.8.3",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "firebase": "^6.3.3",
     "firebaseui": "^4.1.0",
