--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-apexcharts": "^1.4.0",
     "vue-router": "^3.0.7",
     "vuefire": "^2.1.0",
-    "vuetify": "^2.0.0"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@mdi/font": "^3.8.95",
